--- a/GRID_SIMPLE_CONTENT/simple-content-a.html
+++ b/GRID_SIMPLE_CONTENT/simple-content-a.html
@@ -30,8 +30,11 @@
             height: 70vh;
 
             display: grid;
-            grid-template-columns: repeat(5,1fr);
-            grid-template-rows: repeat(5,1fr);         
+            /*grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: repeat(5, 1fr);*/
+            
+            /* HW2 */
+            grid-template: repeat(5, 1fr) / repeat(5, 1fr);
         }
         h1 {
             /*grid-column-start: 1;
